medium-notes.css
/* Bootstrap overrides I should't be doing here 
 * but I'm going to do anyway */
body {
	padding-top: 70px;
}

a {
	color: rgba(255, 145, 8, 1);
}

a:hover {
	cursor: pointer;
	text-decoration: none;
	color: #BF6D06;
}

.form-control:focus {
	border-color: #BF6D06;
	box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(191, 109, 6, .6);
}

hr {
	margin-top: 5px;
	margin-bottom: 10px;
}

h2 {
	font-size: 60px;
	font-weight: 700;
}

/* Application styles */

p {
	font-size: 20px;
	font-family: Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;
}

p a {
	color: inherit;
	text-decoration: underline;
}

p a:hover {
	cursor: inherit;
	color: inherit;
}


hr:last-of-type {
	display: none;
}

#header {
	-webkit-transform: translate3d(0,0,0);
	-moz-transform: translate3d(0,0,0);
	transform: translate3d(0,0,0);
	-webkit-transition: -webkit-transform .3s,height .2s linear;
	-moz-transition: -moz-transform .3s,height .2s linear;
	-o-transition: transform .3s,height .2s linear;
	transition: transform .3s,height .2s linear;
}

#header.asleep {
	-webkit-transform: translate3d(0,-70px,0);
	-moz-transform: translate3d(0,-70px,0);
	transform: translate3d(0,-70px,0);
}

.medium-notes {
	text-align: justify;
	margin: 0 auto;
}

.notes-counter:hover {
	opacity: 1 !important;
	cursor: pointer;
}
.notes-counter:after {
	content: attr(data-count);
	position: relative;
	left: -6px;
	top: -7px;
	font-size: 10px;
	text-align: center;
	border: 1px solid #890405;
	color: #fff;
	font-weight: bold;
	min-width: 20px;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	background: #BF6D06;
	padding: 1px 2px;
}

.notes-counter.focus {
	opacity: 1 !important;
}

.notes-counter[data-count="0"] {
	opacity: 0.1;
}

.notes-counter[data-count="0"]:after{
	content: "";
	background: inherit;
	border: inherit;
}

.highlight {
	background: rgba(255, 145, 8, 1);
}

.paragraph-notes {
	height: 0;
}

.notes-container {
	padding: 0 0 0 28px;
	height: 0;
}

.slidedown {
	-webkit-transform: scaleY(0);
	-o-transform: scaleY(0);
	-ms-transform: scaleY(0);
	transform: scaleY(0);

	-webkit-transform-origin: top;
	-o-transform-origin: top;
	-ms-transform-origin: top;
	transform-origin: top;

	-webkit-transition: -webkit-transform 0.5s ease;
	-o-transition: -o-transform 0.5s ease;
	-ms-transition: -ms-transform 0.5s ease;
	transition: transform 0.2s ease;
}

.slidedown.active {
	-webkit-transform: scaleY(1);
	-o-transform: scaleY(1);
	-ms-transform: scaleY(1);
	transform: scaleY(1);
}

.notes-list {
	list-style-type: none;
	padding: 0;
}

.note-author {
	font-weight: bold;
	font-size: 1em;
	margin-top: 12px;
	margin-bottom: 5px;
}

.note-text {
	font-size: small;
	text-align: left;
}

.add-note {
	font-size: smaller;
}

